--- a/sass/_utility.scss
+++ b/sass/_utility.scss
@@ -1,4 +1,5 @@
 body {
     background: #fff;
-    font-family: 'Open Sans', sans-serif;
+    font-family: $font-family-base;
+    font-size: $font-size-base;
 }
