--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,10 +1,14 @@
 //Font family
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
+$font-size-base: 14px;
+$font-family-base: 'Open Sans', sans-serif;
+
 $black-color: #111;
 $white-color: #fff;
 
 $default: #FFF;
+$black: #111;
 $primary: #303F9F;
 $success: #8BC34A;
 $warning: #FFC107;
