Add alert class

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -16,3 +16,9 @@ $danger: #C00;
 
 $border-radius-default: 4px;
 $border-radius-large: 5px;
+
+//alert
+$info-alert-bg: #B7D9F7;
+$success-alert-bg: #DFF0D8;
+$warning-alert-bg: #FCF8E3;
+$danger-alert-bg: #F2DEDE;
