--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,2 +1,5 @@
+@import "mixins/clearfix";
 @import "mixins/button";
 @import "mixins/alert";
+@import "mixins/grid-framework";
+@import "mixins/grid";
