--- a/sass/_utility.scss
+++ b/sass/_utility.scss
@@ -3,3 +3,8 @@ body {
     font-family: $font-family-base;
     font-size: $font-size-base;
 }
+* {
+	-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+			box-sizing: border-box;	
+}
