--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -22,3 +22,32 @@ $info-alert-bg: #B7D9F7;
 $success-alert-bg: #DFF0D8;
 $warning-alert-bg: #FCF8E3;
 $danger-alert-bg: #F2DEDE;
+
+// grid system by bootstrap.
+$grid-columns:              12 !default;
+$grid-gutter-width:         20px !default;
+
+//Container
+$container-tablet:             (720px + $grid-gutter-width) !default;
+$container-sm:                 $container-tablet !default;
+$container-desktop:            (940px + $grid-gutter-width) !default;
+$container-md:                 $container-desktop !default;
+$container-large-desktop:      (1140px + $grid-gutter-width) !default;
+$container-lg:                 $container-large-desktop !default;
+
+// Screen
+$screen-sm:                  768px !default;
+$screen-sm-min:              $screen-sm !default;
+$screen-tablet:              $screen-sm-min !default;
+
+$screen-md:                  992px !default;
+$screen-md-min:              $screen-md !default;
+$screen-desktop:             $screen-md-min !default;
+
+$screen-lg:                  1200px !default;
+$screen-lg-min:              $screen-lg !default;
+$screen-lg-desktop:          $screen-lg-min !default;
+
+$screen-xs-max:              ($screen-sm-min - 1) !default;
+$screen-sm-max:              ($screen-md-min - 1) !default;
+$screen-md-max:              ($screen-lg-min - 1) !default;
